using System;

public static class Animations {
    public static String IsMoving { get { return "isMoving"; } }
    public static String IsGround { get { return "isGround"; } }
    public static String YVelocity { get { return "yVelocity"; } }
    public static String Jump { get { return "jump"; } }
    public static String IsOnWAll { get { return "isOnWall"; } }
    public static String IsOnCeiling { get { return "isOnCeiling"; } }
}